...

  if (!culturalAsset) {
    return <LoadingIndicator />;
  }

  return (
    <Scaffold testID="assetCreationScreenScaffold">
      <TextInput
        label="Name"
        value={culturalAsset.name}
        onChangeText={onNameChange}
        disabled={submitting}
        testID="assetCreationScreenNameInput"
      />
      <TextInput
        label="Beschreibung"
        value={culturalAsset.description}
        onChangeText={onDescriptionChange}
        disabled={submitting}
...
      <TextInput
        label="Adresse"
        value={culturalAsset.address}
        onChangeText={onAddressChange}
        disabled={submitting}
        style={styles.buttonSpacing}
        testID="assetCreationScreenAddressInput"
      />
      <TextInput
        label="Besonderheiten bei Handhabung"
        value={culturalAsset.label}
        onChangeText={onLabelChange}
        disabled={submitting}
...
      <Button
        icon="check"
        mode="contained"
        onPress={submit}
        style={styles.buttonSpacing}
        loading={submitting}
        testID="assetCreationScreenSubmitButton">
        Fertig
      </Button>
    </Scaffold>
  );

  function onNameChange(newName) {
...
