...
      <ListActions>
        {isAdmin && (
          <IconButton
            color={colors.primary}
            icon="plus-circle-outline"
            onPress={goTaskCreation}
            testID="TaskListScreenAddButton"
          />
        )}
      </ListActions>
      <FancyList
        title="Aufgaben"
        placeholder="Keine Aufgaben vorhanden"
...
          onDismiss={hideMenu}
          anchor={
            <IconButton
              {...props}
              icon="dots-vertical"
              onPress={showMenu}
              testID="assetDetailScreenMenuButton"
            />
          }>
          <Menu.Item
            onPress={toggleIsEndangered}
            title={
              culturalAsset.isEndangered
...
            title="Bearbeiten"
            testID="assetDetailScreenEditButton"
          />
          <Menu.Item
            onPress={deleteAsset}
            title="Löschen"
            testID="assetDetailScreenDeleteButton"
          />
        </Menu>
      );
    } else {
      return null;
    }
...
